<resources>
    <string name="app_name"></string>
    <string name="text_one">1</string>
    <string name="text_two">2</string>
    <string name="text_three">3</string>
    <string name="text_five">5</string>
    <string name="text_six">6</string>
    <string name="text_seven">7</string>
    <string name="text_eight">8</string>
    <string name="text_nine">9</string>
    <string name="text_four">4</string>
    <string name="text_ten">10</string>
    <string name="text_eleven">11</string>
    <string name="text_twelve">12</string>
    <string name="text_thirteen">13</string>
    <string name="text_fourteen">14</string>
    <string name="text_fifteen">15</string>
    <string name="text_sixteen">16</string>


    <string name="winner"></string>

    <string name="action_settings">Settings</string>
    <string name="music_title">Music</string>
    <string name="music_summary">Play Background</string>
    <string name="activity_preferences">Play Background</string>
    <string name="vibrate_option_setting">Vibrate</string>
    <string name="vibrate_summary">Turn On/Off</string>
    <string name="action_remind">Reminder</string>
    <string name="green_label">green label</string>
    <string name="blue_label">Blue Label</string>
    <string name="red_label">Red Label</string>
    <string name="main_layout"></string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Send Us An Email!</string>
    <string name="toast_text">Don\'t Forget! If you reading this your probably late!</string>
    <string name="colour_title">Choose Background Colour</string>
    <string name="appbar_scrolling_view_behavior">appbar</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>

