<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".Game">

    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent">


        <TableLayout
                android:id="@+id/play_grid" android:layout_width="fill_parent"
                android:layout_height="wrap_content" android:layout_marginTop="5dp"
                android:layout_weight="1">

            <TableRow
                    android:gravity="center_horizontal" android:orientation="vertical">
                <Button android:id="@+id/one" android:layout_width="100dp"
                        android:layout_height="150dp" android:text="@string/text_one"
                        android:textSize="40sp"/>
                <Button android:id="@+id/two" android:layout_width="100dp"
                        android:layout_height="150dp" android:text="@string/text_two"
                        android:textSize="40sp"/>
                <Button android:id="@+id/three" android:layout_width="100dp"
                        android:layout_height="150dp" android:text="@string/text_three"
                        android:textSize="40sp"/>
                <Button android:id="@+id/four" android:layout_width="100dp"
                        android:layout_height="150dp" android:text="@string/text_four"
                        android:textSize="40sp"/>
            </TableRow>
            <TableRow
                    android:gravity="center_horizontal">
                <Button android:id="@+id/five" android:layout_width="100dp"
                        android:layout_height="150dp" android:text="@string/text_five"
                        android:textSize="40sp"/>
                <Button android:id="@+id/six" android:layout_width="100dp"
                        android:layout_height="150dp" android:text="@string/text_six"
                        android:textSize="40sp"/>
                <Button android:id="@+id/seven" android:layout_width="100dp"
                        android:layout_height="150dp" android:text="@string/text_seven"
                        android:textSize="40sp"/>
                <Button android:id="@+id/eight" android:layout_width="100dp"
                        android:layout_height="150dp" android:text="@string/text_eight"
                        android:textSize="40sp"/>
            </TableRow>
            <TableRow
                    android:gravity="center_horizontal">
                <Button android:id="@+id/nine" android:layout_width="100dp"
                        android:layout_height="150dp" android:text="@string/text_nine"
                        android:textSize="40sp"/>
                <Button android:id="@+id/ten" android:layout_width="100dp"
                        android:layout_height="150dp" android:text="@string/text_ten"
                        android:textSize="40sp"/>
                <Button android:id="@+id/eleven" android:layout_width="100dp"
                        android:layout_height="150dp" android:text="@string/text_eleven"
                        android:textSize="40sp"/>
                <LinearLayout android:layout_width="wrap_content" android:layout_height="match_parent">
                    <Button android:id="@+id/twelve" android:layout_width="100dp"
                            android:layout_height="150dp" android:text="@string/text_twelve"
                            android:textSize="40sp"/>
                </LinearLayout>


            </TableRow>
            <TableRow
                    android:gravity="center_horizontal">
                <Button android:id="@+id/thirteen" android:layout_width="100dp"
                        android:layout_height="150dp" android:text="@string/text_thirteen"
                        android:textSize="40sp"/>
                <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <Button android:id="@+id/fourteen" android:layout_width="100dp"
                            android:layout_height="150dp" android:text="@string/text_fourteen"
                            android:textSize="40sp"/>
                </LinearLayout>
                <Button android:id="@+id/fifteen" android:layout_width="100dp"
                        android:layout_height="150dp" android:text="@string/text_fifteen"
                        android:textSize="40sp"/>
                <Button android:id="@+id/sixteen" android:layout_width="100dp"
                        android:layout_height="150dp" android:text="@string/text_sixteen"
                        android:textSize="40sp"/>

            </TableRow>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/retuMaMeBtn2"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="44dp" app:layout_constraintEnd_toEndOf="parent"
                    android:text="Return to Main Menu" android:textSize="30sp" android:textColor="#004AAD"/>

        </TableLayout>

    </LinearLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>




